--- a/fotos.html
+++ b/fotos.html
@@ -21,21 +21,17 @@
         <div id="capa">
             <h1>Alison oliveira</h1>
             <p>Estudante</p>
-            <img src="images/perfil-ele.jpg" alt="Alison Oliveira " id="fotodeperfil">
+            <img src="WhatsApp Image 2023-04-18 at 3.25.32 PM.jpeg" alt="Alison Oliveira " id="fotodeperfil">
         </div>
         <nav>
             <div id="menu">
                 <a href="index.html" class="menu">inicio</a>
                 <a href="fotos.html" class="menu">fotos</a>
-        
             </div>
         </nav>
     </header>
     <main>
- <h2>Alison Oliveira</h2>
- <p>
-O meu nome e Alison,eu estudo no PAD(Padre Arimateia Diniz) estou estudando no primeiro ano,faço duas vezes por semana,aulas de informatica...
- </p>
+  <img src="image.png" alt="fotos">
     </main>
 
     <footer>
