--- a/index.html
+++ b/index.html
@@ -18,25 +18,25 @@
 <body>
     <header>
         <div id="sociais">
-            <a href="https://api.whatsapp.com/send?phone=5585992577622" target="_blank" rel="noopener noreferrer"></a>
-    </div>
+            <a href="https://api.whatsapp.com/send?phone=5585992577622" target="_blank" rel="noopener noreferrer"><img src="images/logo-whatsapp.png" alt="whatsapp" ></a>
+    </div>  
     <div id="capa">
         <h1>Alison Oliveira</h1>
-        <p>Alison Oliveira</p>
-        <img src="WhatsApp Image 2023-04-18 at 3.25.32 PM.jpeg" alt="Alison Oliveira" id="fotodeperfil">
+        <p>Estudante</p>
+        <img src="images/perfil-ele.jpg" alt="Alison Oliveira" id="fotodeperfil">
     </div> 
     <nav>
         <div id="menu">
             <a href="index.html" class="menu">inicio</a>
             <a href="fotos.html" class="menu">fotos</a>
-            <a href="imagens.html" class="menu">imagens</a>
+            
         </div>
     </nav>
     </header>
     <main>
 <h2>Alison Oliveira</h2>
 <p>
-    
+
 </p>
     </main>
 
