--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div> 
     <nav>
         <div id="menu">
-            <a href="index.html" class="menu">inicio</a>
+            <a href="index.html" class="menu">part two</a>
             <a href="fotos.html" class="menu">fotos</a>
             
         </div>
