--- a/modelo.html
+++ b/modelo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="pt-br">
     <meta name="description" content="Desenvolvi este  site nos meus estudos de HTML e CSS.">
-    <meta name="keywords" content="Curso, Mateus Monteiro, Desenvolvimento">
+    <meta name="keywords" content="Curso,Alison Oliveira, Desenvolvimento">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto alisson</title>
@@ -25,7 +25,7 @@
         </div>
         <nav>
             <div id="menu">
-                <a href="index.html" class="menu">inicio</a>
+                <a href="index.html" class="menu">part two</a>
                 <a href="fotos.html" class="menu">fotos</a>
         
             </div>
