--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <header>
         <div id="sociais">
-            <a href="https://api.whatsapp.com/send?phone=5585992577622" target="_blank" rel="noopener noreferrer"><img src="images/logo-whatsapp.png" alt="whatsapp" ></a>
+            <a href="https://api.whatsapp.com/send?phone=5585992577622" target="_blank" rel="noopener noreferrer"><img src="images/logo-whatsapp.png" alt="whatsapp"  class="social"></a>
     </div>  
     <div id="capa">
         <h1>Alison Oliveira</h1>
