--- a/modelo.html
+++ b/modelo.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div id="sociais">
-             <a href="https://api.whatsapp.com/send?phone=5585992577622" target="_blank" rel="noopener noreferrer"></a>
+             <a href="https://api.whatsapp.com/send?phone=5585992577622" target="_blank" rel="noopener noreferrer"><img src="images/logo-whatsapp.png" alt="WhatsApp" class="social"></a>
         <div id="capa">
             <h1>Alison oliveira</h1>
             <p>Estudante</p>
