--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description" content="Desenvolvi esse site nos meus estudos de HTML e CLS.">
-    <meta name="keywords" content="Curso, MateusMonteiro, Desenvolvimento">
+    <meta name="keywords" content="Curso, ,Alison Oliveira, Desenvolvimento">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alison Oliveira</title><title>Alison Oliveira</title>
@@ -19,6 +19,7 @@
     <header>
         <div id="sociais">
             <a href="https://api.whatsapp.com/send?phone=5585992577622" target="_blank" rel="noopener noreferrer"><img src="images/logo-whatsapp.png" alt="whatsapp"  class="social"></a>
+        </div>
     </div>  
     <div id="capa">
         <h1>Alison Oliveira</h1>
@@ -27,8 +28,7 @@
     </div> 
     <nav>
         <div id="menu">
-            <a href="index.html" class="menu">part two</a>
-            <a href="fotos.html" class="menu">fotos</a>
+        
             
         </div>
     </nav>
