--- a/index.html
+++ b/index.html
@@ -41,9 +41,27 @@
  Eu estudo PAD(Padre Arimateia Diniz)estou no primeiro ano,cursando sobre desenvolvimento.
 </p>
 <div>
-    <h2>Rap do Broly</h2>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/1RwbaLQM3F8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+ <H4>Musica Classica</H4>
+ "<iframe width="560" height="315" src="https://www.youtube.com/embed/jgpJVI3tDbY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>" 
+
 </div>
+ 
+
+<div class="Filmes"> 
+   <h3> O massacre da serra eletrica</h3>
+
+<img src="images/OIP.jfif" alt="" class="Poster">
+    
+</div>
+
+<div class="Filmes"> 
+    <h3>O Pesadelo </h3>
+
+    <img src="images/OIP (1).jfif" alt="" class="Poster">
+ 
+</div>
+
+
 
     </main>
 
