--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alison Oliveira</title><title>Alison Oliveira</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="images/cropped-Creme_Crown_Favicon.png" type="image/x-icon">
     <script src="script.js"></script>
 
     <style>
@@ -24,7 +24,7 @@
     <div id="capa">
         <h1>Alison Oliveira</h1>
         <p>Estudante</p>
-        <img src="images/perfil-ele.jpg" alt="Alison Oliveira" id="fotodeperfil">
+        <img src="images/9a64771bca7d2f2cf1a83f70705728df.jpg" alt="Alison Oliveira" id="fotodeperfil">
     </div> 
     <nav>
         <div id="menu">
@@ -38,7 +38,7 @@
 <p>
  Oi,sou Alison,bem gosto de ler livros sobre vários sobre temas.minha vida não é corrida,acho até meio sem graça.Gosto muito de esportes,futebol 
  eu amo futebol.Sentir a adrenalina no corpo..
- Eu estudo PAD(Padre Arimateia Diniz)estou no primeiro ano,cursando sobre desenvolvimento.
+ Eu estudo PAD(Padre Arimateia Diniz)estou no primeiro ano,cursando sobre desenvolvimento.Adoro Musica Classica e tambem gosto de filmes de terror antigos.
 </p>
 <div>
  <H4>Musica Classica</H4>
