--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alison Oliveira</title><title>Alison Oliveira</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="images/cropped-Creme_Crown_Favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
     <script src="script.js"></script>
 
     <style>
