--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="capa">
         <h1>Alison Oliveira</h1>
         <p>Estudante</p>
-        <img src="images/9a64771bca7d2f2cf1a83f70705728df.jpg" alt="Alison Oliveira" id="fotodeperfil">
+        <img src="images/FLliZLNXwAQ7rDE.jpg" alt="Alison Oliveira" id="fotodeperfil">
     </div> 
     <nav>
         <div id="menu">
